<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titleHint"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amounthint"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <Spinner
            android:id="@+id/currencySpinner"
            android:layout_width="match_parent"
            android:hint="@string/currency"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/descriptionhint"
            android:inputType="text"
            android:autofillHints="" />

        <Button
            android:id="@+id/saveExpenseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_expense" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>